# Demo-Day

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  GIT_GUIDE.md  PYTHON_VERSIONS_GUIDE.md  README.md  README_PUBLIC.md  README_SCRIPTS.md  SCRIPTS_GUIDE.md  WORKFLOW.md  agent_workflow.py  deploy_hf.sh  document_loader_preproc.py  full_deploy.sh  git_workflow.sh  rag_system.py  requirements.txt  setup_dev_env.sh  start_dev.sh  sync_to_app.sh  test_app.sh  test_hf_ssh.sh
demoday_challenge/: .env_312  README.md  agent_workflow.py  document_loader.py  embedding_finetuning.ipynb  evaluation.py  main_notebook.ipynb  preprocess_chuncks.ipynb  preprocessed_chunks.json  preprocessed_chunks.pkl  pyproject.toml  rag_system.py
demoday_challenge/metrics/openai_evaluation_results/: domain_metric.json  metrics_by_category.json  overall_metrics.json
demoday_challenge/metrics/snowflake_finetuned_evaluation_results/: domain_metric.json  metrics_by_category.json  overall_metrics.json
puppycompanion-app/: Dockerfile  README.md  agent_workflow.py  app.py  embedding_models.py  embedding_models_simplified.py  evaluation.py  pyproject.toml
puppycompanion-app/data/: preprocessed_chunks_puppies.json
puppycompanion-fast-api/: .hf_force_rebuild  README.MD  main.py  pyproject.toml
static/: _index.html  index.html
