[project]
name = "ai_research_assistant"
version = "0.1.0"
description = "Assistant de recherche IA modulaire basé sur RAG"
readme = "README.md"
authors = [
    {name = "jthomazo", email = "jthomazo@example.com"},
]
dependencies = [
    "langchain>=0.0.300",
    "langchain-community>=0.0.16",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-huggingface>=0.0.1",
    "langchain-cohere>=0.0.1",
    "langchain-qdrant>=0.0.1",
    "langchain-chroma>=0.1.0",
    "chromadb>=1.0.0",
    "qdrant-client>=1.6.0",
    "chainlit>=1.0.0",
    "openai>=1.6.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "ragas>=0.1.1",
    "langgraph>=0.0.17",
    "bs4>=0.0.1",
    "tavily-python>=0.2.4",
    "pandas>=2.0.0",
    "nest-asyncio>=1.5.6",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "ipykernel>=6.0.0",
    "pymupdf>=1.22.0",
    "unstructured>=0.11.0",
    "pypdf>=3.15.1",
    "pdf2image>=1.16.0",
    "pdfminer.six>=20221105",
    "pi-heif>=0.12.0",
    "wrapt>=1.15.0",
    "pillow>=10.0.0",
    "seaborn>=0.12.0",
]
requires-python = ">=3.9,<4.0"
license = "MIT"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "document_loader",
    "agent_workflow", 
    "embedding_models",
    "evaluation",
    "rag_system"
]

[tool.setuptools.packages.find]
exclude = ["data*", "metrics*", "venv_dev_312*", "doc*", ".venv*", "__pycache__*", "*.egg-info*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]

[project.optional-dependencies]
dev = [
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "pytest>=7.4.3",
    "ruff>=0.0.270",
]

[project.scripts]
finetune-embeddings = "ai_research_assistant.finetune_embeddings:main_wrapper"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 